# MicroComp

./: .gitignore  MicroComp Reference v1.0.txt  MicroComp Reference v1.1.0.txt  MicroComp Reference v1.1.1.txt  MicroComp Reference v1.1.3.txt  README.md  Status.txt  log.txt
Assembly Programs/: Basic Instruction Test Hand Assembly.ucmp  Basic Instruction Test Hex.hex  Basic Instruction Test Hex.txt  Basic Instruction Test.ucmp  IO Test Hand Assembly.ucmp  IO Test Hex.txt  IO Test.ucmp  Output Test.ucmp  bootloader-asm.txt  bootloader.ucmp  fibonacci-assembly.txt  fibonacci.hex  fibonacci.mem  fibonacci.txt  fibonacci.ucmp
Emulator/: CMakeLists.txt  Settings.txt  Specification.txt  emulate.sh  microcomp.c  microcomp.h  microcomp_emulator.c  microcomp_emulator.h  scratch.txt
assembler/: MicroComp Assembly Reference v1.1.3.txt  assembler.dl  assembler.hna  duck-lisp.txt  fibonacci.hna  fibonacci.ucmp
debugger/: instructions.txt  sram-program-attempt.txt  sram-sucessful-program-1.txt
debugger/.mcuxpressoide_packages_support/: info.properties
debugger/lpc_chip_175x_6x/: .cproject
development/: Instruction Test Log v1.0.txt  Lessons Learned.txt  MicroComp Breadboard Chip Layout.txt  MicroComp DMA.txt  MicroComp Microcode scratchwork.txt  MicroComp Tasks.txt  MicroComp v1.1 scratchwork.txt  MicroComp v1.1.1 scratchwork.txt  MicroComp v1.1.2 scratchwork.txt  MicroComp.txt  Overflow Calculations.txt  Power Calculation.txt  Power On.txt  assembler.txt  subroutines.txt
failure_analysis/: microcode.txt  microcomp_analysis.txt  solutions.txt
microcode/: build.sh
(+98 files in other folders)
